@@ -219,14 +219,14 @@ Command Options
     -v			Display the version of Publican
 EOL
 
-            my $pod = qx|perl -CA -I lib bin/publican --help_actions|;
+            my $pod = qx|perl -CAS -I lib bin/publican --help_actions|;
             print($POD_FILE $pod);
             print($POD_FILE <<EOL);
 =head1 INTERFACE 
 
 EOL
 
-            $pod = qx|perl -CA -I lib bin/publican --help all|;
+            $pod = qx|perl -CAS -I lib bin/publican --help all|;
             my $version = $self->dist_version;
             print($POD_FILE $pod, "\n");
             print($POD_FILE <<EOL);
@@ -267,7 +267,7 @@ EOL
 
             close($POD_FILE);
 
-            $self->do_system('perl -CA -I lib bin/publican --bash');
+            $self->do_system('perl -CAS -I lib bin/publican --bash');
             return;
         }
     }
