@@ -1,7 +1,4 @@
-#!/usr/bin/perl -CA
-
-eval 'exec /usr/bin/perl -CA -S $0 ${1+"$@"}'
-    if 0;    # not running under some shell
+#!/usr/bin/perl -CAS
 
 #BUGBUG -CAS should allow removing utf8::encode, utf8::decode from Translate.pm
 # See: http://perldoc.perl.org/perlrun.html#*-C-[_number/list_]*
