@@ -16,7 +16,7 @@
 
 Name:           publican
 Version:        3.2.1
-Release:        0%{?dist}.t3
+Release:        0%{?dist}.t4
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
@@ -182,7 +182,7 @@ Website style for common brand for DocBook5 content
 %build
 %{__perl} Build.PL installdirs=vendor --nocolours=1
 ./Build --nocolours=1
-dir=`pwd` && cd Users_Guide && %{__perl} -CA -I $dir/blib/lib $dir/blib/script/publican build \
+dir=`pwd` && cd Users_Guide && %{__perl} -CAS -I $dir/blib/lib $dir/blib/script/publican build \
     --formats=html-desktop --publish --langs=all \
     --common_config="$dir/blib/datadir" \
     --common_content="$dir/blib/datadir/Common_Content" --nocolours
@@ -212,11 +212,11 @@ done
 mkdir -p -m755 $RPM_BUILD_ROOT/%{wwwdir}/%{brand}
 dir=`pwd`
 cd datadir/Common_Content/common
-%{__perl} -CA -I $dir/blib/lib $dir/blib/script/publican install_brand --web --path=$RPM_BUILD_ROOT/%{wwwdir}/%{brand}
+%{__perl} -CAS -I $dir/blib/lib $dir/blib/script/publican install_brand --web --path=$RPM_BUILD_ROOT/%{wwwdir}/%{brand}
 cd -
 mkdir -p -m755 $RPM_BUILD_ROOT/%{wwwdir}/common-db5
 cd datadir/Common_Content/common-db5
-%{__perl} -CA -I $dir/blib/lib $dir/blib/script/publican install_brand --web --path=$RPM_BUILD_ROOT/%{wwwdir}/common-db5
+%{__perl} -CAS -I $dir/blib/lib $dir/blib/script/publican install_brand --web --path=$RPM_BUILD_ROOT/%{wwwdir}/common-db5
 cd -
 
 %check
