@@ -52,8 +52,8 @@ my $dir;
 
 if($build) {
 $dir = pushd("Users_Guide");
-system(qq{perl -CA -I $lib $publican clean --common_config="$common_config" --common_content="$common_content"});
-system(qq{perl -CA -I $lib $publican build --publish --formats=html-desktop --langs=en-US --common_config="$common_config" --common_content="$common_content"});
+system(qq{perl -CAS -I $lib $publican clean --common_config="$common_config" --common_content="$common_content"});
+system(qq{perl -CAS -I $lib $publican build --publish --formats=html-desktop --langs=en-US --common_config="$common_config" --common_content="$common_content"});
 $dir = undef;
 
 my $brand_path = 'C:\Users\jfearn\publican';#'C:\publican\trunk';
@@ -61,8 +61,8 @@ my $brand_path = 'C:\Users\jfearn\publican';#'C:\publican\trunk';
 foreach my $brand (@brands) {
 	print("\nPreparing $brand\n");
 	$dir = pushd("$brand_path/$brand");
-	system(qq{perl -CA -I $lib $publican clean --common_config="$common_config" --common_content="$common_content"});
-	system(qq{perl -CA -I $lib $publican build --formats=xml --langs=all --publish --common_config="$common_config" --common_content="$common_content"});
+	system(qq{perl -CAS -I $lib $publican clean --common_config="$common_config" --common_content="$common_content"});
+	system(qq{perl -CAS -I $lib $publican build --formats=xml --langs=all --publish --common_config="$common_config" --common_content="$common_content"});
 	$dir = undef;              
 }
 
